k8s/05-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
  namespace: py-app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: py-app-ns
spec:
  selector:
    app: postgres-db
  ports:
    - port: 5432
      targetPort: 5432
