k8s/06-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-web-app
  namespace: py-app-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-web-app
  template:
    metadata:
      labels:
        app: python-web-app
    spec:
      serviceAccountName: py-app-sa
      containers:
        - name: python-app
          image: my-python-web-app:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: python-web-service
  namespace: py-app-ns
spec:
  type: ClusterIP
  selector:
    app: python-web-app
  ports:
    - port: 80
      targetPort: 5000
